@@ -40,7 +40,7 @@ import static co.elastic.apm.agent.impl.transaction.AbstractSpan.PRIO_HIGH_LEVEL
 import static net.bytebuddy.matcher.ElementMatchers.isAnnotatedWith;
 import static net.bytebuddy.matcher.ElementMatchers.isBootstrapClassLoader;
 import static net.bytebuddy.matcher.ElementMatchers.isInterface;
-import static net.bytebuddy.matcher.ElementMatchers.named;
+import static net.bytebuddy.matcher.ElementMatchers.namedOneOf;
 import static net.bytebuddy.matcher.ElementMatchers.not;
 
 public class JaxWsTransactionNameInstrumentation extends TracerAwareInstrumentation {
@@ -76,7 +76,7 @@ public class JaxWsTransactionNameInstrumentation extends TracerAwareInstrumentat
         // the implementations have to be annotated as well
         // quote from javadoc:
         // "Marks a Java class as implementing a Web Service, or a Java interface as defining a Web Service interface."
-        return isAnnotatedWith(named("javax.jws.WebService").or(named("jakarta.jws.WebService"))).and(not(isInterface()));
+        return isAnnotatedWith(namedOneOf("javax.jws.WebService", "jakarta.jws.WebService")).and(not(isInterface()));
     }
 
     @Override
@@ -90,7 +90,7 @@ public class JaxWsTransactionNameInstrumentation extends TracerAwareInstrumentat
     public ElementMatcher<? super MethodDescription> getMethodMatcher() {
         return overridesOrImplementsMethodThat(
             isAnnotatedWith(
-                named("javax.jws.WebMethod").or(named("jakarta.jws.WebMethod"))))
+                namedOneOf("javax.jws.WebMethod", "jakarta.jws.WebMethod")))
             .onSuperClassesThat(isInAnyPackage(applicationPackages, ElementMatchers.<NamedElement>any()));
     }
 
